# speckit-assessment

./: README.md  comparison-report.md
BMAD/: .gitignore  pyproject.toml
BMAD/_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-and-package-setup.md  1-2-cloud-region-endpoint-definitions.md  sprint-status.yaml
BMAD/_bmad-output/planning-artifacts/: epics.md  prd.md  product-brief-cloudlatency-distillate.md  product-brief-cloudlatency.md  ux-design-specification.md
BMAD/_bmad/_config/: files-manifest.csv  manifest.yaml
BMAD/_bmad/bmm/: config.yaml
BMAD/_bmad/core/: config.yaml
BMAD/docs/: api.md
BMAD/docs/planning-artifacts/: architecture.md  implementation-readiness-report-2026-03-28.md
BMAD/src/cloudlatency/: __init__.py  __main__.py  api.py  app.py  logging_config.py  models.py  probe.py  regions.py  sse.py  store.py
BMAD/tests/: conftest.py  test_api.py  test_app.py  test_init.py  test_logging_config.py  test_models.py  test_probe.py  test_regions.py  test_sse.py  test_store.py
SpecKitWithExtensions/: .coverage  .docguard.json  .env.example  AGENTS.md  CHANGELOG.md  DRIFT-LOG.md  LICENSE  README.md  journey.md  pyproject.toml  requirements-dev.txt  requirements.txt
SpecKitWithExtensions/.specify/: extensions.yml  init-options.json
SpecKitWithExtensions/.specify/extensions/: .registry
SpecKitWithExtensions/.specify/memory/: constitution.md
SpecKitWithExtensions/.windsurf/workflows/: docguard.guard.md  speckit.docguard.diagnose.md  speckit.docguard.fix.md  speckit.docguard.score.md  speckit.plan.md  speckit.verify-tasks.run.md  speckit.verify.run.md
SpecKitWithExtensions/cloudlatency/: __init__.py  config.py  logging_config.py  main.py
SpecKitWithExtensions/cloudlatency/api/: __init__.py  app.py  routes.py  schemas.py  sse.py
SpecKitWithExtensions/cloudlatency/engine/: __init__.py  discovery.py  models.py  prober.py  (+1 more)
SpecKitWithExtensions/commands/: docguard.fix.md  docguard.guard.md  docguard.review.md  docguard.score.md
SpecKitWithExtensions/docs-canonical/: ARCHITECTURE.md  DATA-MODEL.md  ENVIRONMENT.md  REQUIREMENTS.md  SECURITY.md  TEST-SPEC.md
SpecKitWithExtensions/tests/: conftest.py
(+43 files in other folders)
